// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-af4vhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  cursor: text;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-af4vhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-af4vhh:hover {
  border: 1px solid #4f0599;
}

.cache-af4vhh>* {
  margin: 6px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-af4vhh ea7vc6o1"
    >
      <input
        aria-label="test"
        class="cache-1xj7r5t ea7vc6o0"
        name="test"
        placeholder="placeholder"
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-af4vhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  cursor: text;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-af4vhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-af4vhh:hover {
  border: 1px solid #4f0599;
}

.cache-af4vhh>* {
  margin: 6px;
}

<form
    novalidate=""
  >
    <div
      class="cache-af4vhh ea7vc6o1"
    />
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags 1`] = `
<DocumentFragment>
  .cache-af4vhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  cursor: text;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-af4vhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-af4vhh:hover {
  border: 1px solid #4f0599;
}

.cache-af4vhh>* {
  margin: 6px;
}

.cache-1tuypgt {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-ncx4sq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4a4f62;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.cache-ncx4sq:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ncx4sq:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-ncx4sq:hover,
.cache-ncx4sq:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-af4vhh ea7vc6o1"
    >
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-1
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-2
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <input
        aria-label="test-tags"
        class="cache-1xj7r5t ea7vc6o0"
        name="test-tags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags on initialValues Form 1`] = `
<DocumentFragment>
  .cache-af4vhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  cursor: text;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-af4vhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-af4vhh:hover {
  border: 1px solid #4f0599;
}

.cache-af4vhh>* {
  margin: 6px;
}

.cache-1tuypgt {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-ncx4sq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4a4f62;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.cache-ncx4sq:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ncx4sq:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-ncx4sq:hover,
.cache-ncx4sq:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-af4vhh ea7vc6o1"
    >
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-1
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-2
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <input
        aria-label="formTags"
        class="cache-1xj7r5t ea7vc6o0"
        name="formTags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags on initialValues Form 2`] = `
<DocumentFragment>
  .cache-af4vhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  cursor: text;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-af4vhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-af4vhh:hover {
  border: 1px solid #4f0599;
}

.cache-af4vhh>* {
  margin: 6px;
}

.cache-1tuypgt {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-ncx4sq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #4a4f62;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.cache-ncx4sq:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ncx4sq:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-ncx4sq:hover,
.cache-ncx4sq:active {
  background: #e6e9f0;
  color: #4a4f62;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-af4vhh ea7vc6o1"
    >
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-1
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          tags-2
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <span
        class="cache-1tuypgt el6733p2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt el6733p1"
        >
          test
        </span>
        <button
          aria-label="Close tag"
          class="el6733p0 cache-ncx4sq e112qvla0"
          data-testid="close-tag"
          type="button"
        >
          <svg
            class="cache-1ah7xw8-sizeStyles e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </span>
      <input
        aria-label="formTags"
        class="cache-1xj7r5t ea7vc6o0"
        name="formTags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;
